Refactored code to avoid functions deprecated in Java SE 9.